Fixed layout problems

--- a/css/style.css
+++ b/css/style.css
@@ -25,41 +25,85 @@ div#header{
 */
 
 #wrapper {
+	height: 100%;
 	position: relative;
-	padding-left: 500px;
 }
 
 div#sidebar {
 	width: 150px;
+	height: 100%;
+	background: #274966;
 	position: fixed;
-	top: 0;
-	bottom: 0;
-	overflow: auto;
-	margin-left: -500px;
-	background-color: red;
+	top: 0px;
+	bottom: 0px;
+	text-align: center;
+	color: #fff;
+}
+
+div#sidebar ul.left-nav {
+	list-style-type: none;
+	margin-left: 10px;
+	line-height: 25px;
+	padding: 0px;
+	text-align: left;
+	letter-spacing: 2px;
+}
+
+div#sidebar ul.left-nav a {
+	text-decoration: none;
+	color: #fff;
 }
 
 div#content {
-	width: 100%;
+	height: 100%;
+	margin-left: 150px;
+	background: #fff;
 }
 
 div#content img {
-	width: 100%;
-	margin-left: -350px;
+	padding: 0px;
+	margin: 0px;
 }
 
-/*
-div#content div.pure-u-1-3 div {
+div#content div#container div.pure-u-1-3 div {
 	padding: 5px;
 	margin: 5px;
 	background-color: rgb(250, 250, 250);
+	
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	-o-border-radius: 5px;
+	
 	box-shadow: 0px 0px 5px #ccc;
 	-webkit-box-shadow: 0px 0px 5px #ccc;
 	-moz-box-shadow: 0px 0px 5px #ccc;
 	-o-box-shadow: 0px 0px 5px #ccc;
 }
-*/
+
+#container {
+	width: 90%;
+	margin: 0px auto;
+}
+
+
+@media (max-width: 480px) {
+	div#sidebar {
+		width: 100%;
+		height: 70px;
+		position: fixed;
+	}
+	
+	div#sidebar ul.left-nav {
+		margin-left: 25px;
+	}
+	
+	div#sidebar ul.left-nav li {
+		display: inline;
+	}
+	
+	div#content {
+		margin: 90px 0px 0px 0px;
+	}
+}
+
